# adipose_atlas

./: .gitignore  README.md  pyproject.toml
adipose_atlas/: cli.py  embedding.py  pipelines.py  spatial_proximity.py  spatial_stress.py
adipose_atlas/utils/: config.py  loader.py  logger.py  seed.py
adipose_atlas/visualization/: __init__.py  cell_type_abundance.py  cell_type_composition.py  embedding_projection.py  marker_genes_dotplot.py  spatial_proximity_matrix.py  stress_heatmaps.py
configs/: global_atlas_embedding.yaml  myeloid_state.yaml  spatial_analysis.yaml
