[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "at_single_cell_reproduction"
version = "0.1.dev0"
description = "Select reproduction of adipose single-cell analysis from Miranda et al., Nature, 2025."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anndata==0.12.9",
  "numpy==2.3.5",
  "pandas==2.3.3",
  "PyYAML==6.0.3",
  "scanpy==1.11.5",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adipose_atlas", "adipose_atlas.*"]
exclude = ["data*", "configs*", "tests*"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[project.scripts]
adipose_atlas = "adipose_atlas.cli:main"